--- a/index.html
+++ b/index.html
@@ -2,24 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Design Tricks for Google Sites</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Google Site Layout Tips</title>
   <style>
     body {
-      background-color: #1c1c1e;
-      color: #e4e4e4;
-      font-family: "Maven Pro", sans-serif;
+      background-color: #111;
+      color: #eee;
+      font-family: 'Maven Pro', sans-serif;
       font-size: 16px;
-      line-height: 1.7;
-      padding: 40px 20px;
-      max-width: 800px;
+      line-height: 1.6;
+      max-width: 700px;
       margin: auto;
+      padding: 2em;
     }
-    h1 {
-      font-size: 2.2em;
+    h1, h2 {
       color: #5c7cfa;
       text-align: center;
     }
-    h2 {
+    h3 {
       color: #51cf66;
       margin-top: 2em;
     }
@@ -27,7 +27,10 @@
       margin-bottom: 1em;
     }
     ul {
-      padding-left: 20px;
+      padding-left: 1.2em;
+    }
+    strong {
+      color: #fff;
     }
     a {
       color: #fff;
@@ -36,58 +39,40 @@
     a:hover {
       color: #ffe066;
     }
-    .icon {
-      font-size: 40px;
-      text-align: center;
-      margin-bottom: 10px;
-    }
-    .quote {
-      font-style: italic;
-      color: #aaa;
-      margin-top: 30px;
-      text-align: center;
-    }
   </style>
 </head>
 <body>
-  <div class="icon">🧰</div>
-  <h1>Design Tricks for Google Sites</h1>
+  <h1>🛠️ Quick Layout Tips for Google Sites</h1>
+  <p><em>Speed up design, stay consistent, and save yourself from layout frustration!</em></p>
 
-  <h2>🧭 Why This Matters</h2>
-  <p>Google Sites is easy to use—but it can look cluttered or unreadable if you’re not careful. Here’s how to make your content shine, without touching any code.</p>
+  <h3>🧩 1. Use a Master Copy (Your Perfect Box)</h3>
+  <p>Once you've made a textbox with ideal width, font size, spacing, alignment, etc., duplicate it instead of starting fresh each time. <br>
+  <strong>Right-click the textbox → Duplicate</strong>, then just swap the content. Keeps spacing perfect with zero extra work.</p>
 
-  <h2>🎯 Centered Layouts</h2>
+  <h3>📦 2. Resize Smartly: Use the Blue Grid Lines</h3>
+  <p>Google Sites shows <strong>snap-to-blue-lines</strong> when resizing. Drag your textbox until it locks to the center — this ensures proper visual balance.</p>
+
+  <h3>🏗️ 3. Use a Single Column Layout</h3>
+  <p>Avoid multiple columns for text. Keep your layout in <strong>one clean vertical stack</strong>. Use line breaks or section padding to separate content instead of messy dividers.</p>
+
+  <h3>🧙‍♂️ 4. Zoom Out for Easier Layout</h3>
+  <p>Zoom your browser out (e.g., Ctrl + -) while resizing. This makes it easier to align boxes and keep proportions. Zoom back in to refine content.</p>
+
+  <h3>🖼️ 5. Stack Text and Images Vertically</h3>
+  <p>Put images <strong>above or below</strong> text, not side-by-side. This scales better on mobile and keeps everything centered naturally.</p>
+
+  <h3>💾 6. Prebuilt Templates</h3>
+  <p>Create a hidden "template" page with various pre-styled blocks — textboxes, headers, image layouts, etc. Duplicate the page for new sections and just change the content!</p>
+
+  <h3>⚠️ Bonus Gotcha Warning</h3>
+  <p>Google Sites sometimes messes up formatting when pasting from Google Docs or Word. To avoid hidden issues:</p>
   <ul>
-    <li>Use the text box resize handles to manually center your text.</li>
-    <li>Avoid stretching your content across the full page width—it makes reading harder.</li>
-    <li>Keep your layout narrow, like reading a book.</li>
+    <li>Paste into Notepad first, then into Google Sites</li>
+    <li>Or use <strong>Ctrl + Shift + V</strong> to paste without formatting</li>
   </ul>
 
-  <h2>🖋 Font Tips</h2>
-  <ul>
-    <li>Select legible fonts like <strong>Maven Pro</strong> or <strong>Spectral</strong>.</li>
-    <li>Use font size around 13–15 for body text.</li>
-    <li>Avoid bold or italic unless it adds emphasis.</li>
-    <li>Adjust line spacing to around <strong>1.25</strong> for comfort.</li>
-  </ul>
-
-  <h2>🎨 Color & Contrast</h2>
-  <ul>
-    <li>Use bright or white fonts on dark backgrounds for clarity.</li>
-    <li>Set links to a visible color and add a soft hover effect like <span style="color: #ffe066;">#ffe066</span>.</li>
-    <li>Avoid using broken or unreadable code icons—skip them if they don’t load right.</li>
-  </ul>
-
-  <h2>📚 Visual Structure</h2>
-  <ul>
-    <li>Use emojis at the top of each section to hint at the theme visually.</li>
-    <li>Apply different heading colors for sections—green for tips, yellow for examples, blue for intro, pink for wrap-up.</li>
-    <li>Skip dividers unless absolutely necessary—they clutter the flow.</li>
-  </ul>
-
-  <h2>🚀 Real-World Examples</h2>
-  <p>Don’t use unrelated references—if your site is about creativity or writing, stick to those examples. It helps focus the message.</p>
-
-  <div class="quote">“Your layout is your stage. Design it to guide the eyes and invite curiosity.”</div>
+  <p style="margin-top: 3em; font-style: italic; color: #aaa; text-align: center;">
+    "Work smart, not just hard — your fingertips will thank you."
+  </p>
 </body>
 </html>
