--- a/index.html
+++ b/index.html
@@ -105,6 +105,15 @@
       <p>To avoid messy formatting from Google Docs or Word, paste into Notepad first to clear styles, or use <code>Ctrl + Shift + V</code> to paste as plain text.</p>
     </div>
 
+<div style="margin-top: 40px;">
+  <a href="https://www.mazeofdragons.com/admin/website-embed-tips" 
+     target="_blank" 
+     rel="noopener" 
+     style="font-size: 18px; font-weight: bold; color: #ffe066; text-decoration: underline;">
+    ➤ Continue to website embed tips
+  </a>
+</div>
+    
   </div>
 </body>
 </html>
