--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     </div>
 
 <div style="margin-top: 40px;">
-  <a href="https://www.mazeofdragons.com/admin/website-embed-tips" 
+  <a href="https://sites.google.com/view/mazeofdragons/off-topic/knowledge/coding/website-layout-tips/website-embed-tips" 
      target="_blank" 
      rel="noopener" 
      style="font-size: 18px; font-weight: bold; color: #ffe066; text-decoration: underline;">
